lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/http_auth_match_rules/http_auth_match_rules2/http_auth_match_rules2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/http_auth_match_rules/http_auth_match_rules2/http_auth_match_rules2.c:51:27: error: use of undeclared identifier 's__require'
    http_auth_match_rules(s__require ,str_user ,str_group ,str_host );
                          ^
1 error generated.
